[package]
name = "twitnot"
version = "0.1.0"
authors = ["NAKANO Hideo <pinarello.marvel@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "*"
chrono = "*"
clap = "*"
dotenv = "*"
encoding = "*"
env_logger = "*"
lettre = "*"
lettre_email = "*"
mime = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
rust-sqlite = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
time = "*"
